--- a/page-jmms/styles.css
+++ b/page-jmms/styles.css
@@ -1,24 +1,35 @@
+:root {
+  --first-blue: #3f87a6;
+  --intermediate-color: #ebf8e1;
+  --first-orange: #f69d3c;
+  --body-bg: white;
+  --container-bg: rgba(128, 128, 128, 0.5);
+  --letter-color: #3f87a6;
+}
+
+/* ---------------------------------- ANIMATIONS ----------------------------------------------- */
+
 @keyframes move-left {
   0% {
-    color: black;
+    /* color: black; */
   }
   50% {
     color: white;
   }
   100% {
-    color: black;
+    /* color: black; */
     margin-right: 120px;
   }
 }
 @keyframes move-right {
   0% {
-    color: black;
+    /* color: black; */
   }
   50% {
     color: white;
   }
   100% {
-    color: black;
+    /* color: black; */
     margin-left: 120px;
   }
 }
@@ -28,40 +39,8 @@
     visibility: hidden;
   }
   to {
-    color: black;
+    /* color: black; */
     visibility: visible;
-  }
-}
-
-@keyframes increase {
-  0% {
-    border: none;
-    border-left: 6px solid black;
-  }
-  50% {
-    border-top: 6px solid black;
-  }
-  100% {
-    border-right: 6px solid black;
-  }
-}
-
-@keyframes spin {
-  100% {
-    color: black;
-    transform: rotate(1turn);
-    visibility: visible;
-  }
-}
-@keyframes waves {
-  0% {
-    transform: translateX(-60px);
-  }
-  50% {
-    transform: translatex(0px);
-  }
-  100% {
-    transform: translateX(-60px);
   }
 }
 
@@ -69,11 +48,11 @@
   0%,
   100% {
     height: 100px;
-    background-color: white;
+    /* background-color: white; */
   }
   50% {
     height: 50px;
-    background-color: black;
+    /* background-color: black; */
   }
 }
 @keyframes begin {
@@ -88,17 +67,20 @@
   }
 }
 
+/* ----------------------------------------------------------------------------- */
+
 body {
   width: 100%;
   height: 100vh;
   margin: 0;
   padding: 0;
-  background: black;
+  background: var(--body-bg);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+/* --------------------------------- LETTERS --------------------------------------- */
 .container {
   bottom: 100px;
   width: 80vw;
@@ -109,46 +91,30 @@ body {
   justify-content: center;
   font-size: 8em;
   font-weight: 700;
-  /* background-image: url("https://images.theconversation.com/files/223729/original/file-20180619-126566-1jxjod2.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=1200.0&fit=crop"); */
-  background: #5a5a5a;
+  background: var(--container-bg);
   background-size: contain;
-  border-radius: 0.5em;
+  color: var(--letter-color);
+  /* border-radius: 0.5em; */
   overflow: hidden;
-  animation: 1s begin 0.4s both;
+  /* animation: 1s begin 0.4s both; */
 }
-
 .container .item {
   transform: translateY(-50px);
 }
-
 .container .item .J {
   animation: 1s move-left 0.8s both;
   transition: color 1s;
 }
-
 .container .item .S {
   animation: 1s move-right 0.8s both;
 }
-
 .container .item.MM {
   position: absolute;
   visibility: hidden;
   animation: 0.5s appear 1.3s both;
 }
 
-.spinner {
-  position: absolute;
-  bottom: 150px;
-  width: 75px;
-  aspect-ratio: 1;
-  visibility: hidden;
-  border-top: 6px solid;
-  border-color: black;
-  border-radius: 100%;
-  animation: spin 2s ease infinite;
-  /* increase 2s cubic-bezier(0.1, -0.6, 0.2, 0) infinite; */
-}
-
+/* ------------------------------------ BARS ------------------------------------------- */
 .bars {
   position: absolute;
   bottom: 100px;
@@ -162,15 +128,17 @@ body {
   visibility: hidden;
   animation: 1.5s appear 2s both;
 }
-
 .bar {
   width: 10px;
   height: 50px;
-  background: white;
+  background: linear-gradient(
+    var(--first-blue),
+    var(--intermediate-color),
+    var(--first-orange)
+  );
   border-radius: 999px;
   animation: movement 1s linear infinite;
 }
-
 .bar:nth-child(1),
 .bar:nth-child(11) {
   animation-delay: 1.6s;
@@ -202,4 +170,48 @@ body {
 }
 .bar:hover {
   animation: none;
+}
+
+/* ---------------------------- NOT USED -------------------------------------------- */
+.spinner {
+  position: absolute;
+  bottom: 150px;
+  width: 75px;
+  aspect-ratio: 1;
+  visibility: hidden;
+  border-top: 6px solid;
+  border-color: black;
+  border-radius: 100%;
+  animation: spin 2s ease infinite;
+  /* increase 2s cubic-bezier(0.1, -0.6, 0.2, 0) infinite; */
+}
+@keyframes increase {
+  0% {
+    border: none;
+    border-left: 6px solid black;
+  }
+  50% {
+    border-top: 6px solid black;
+  }
+  100% {
+    border-right: 6px solid black;
+  }
+}
+@keyframes spin {
+  100% {
+    color: black;
+    transform: rotate(1turn);
+    visibility: visible;
+  }
+}
+@keyframes waves {
+  0% {
+    transform: translateX(-60px);
+  }
+  50% {
+    transform: translatex(0px);
+  }
+  100% {
+    transform: translateX(-60px);
+  }
 }
